# swagger-output.json
@@ -501,20 +501,28 @@
         }
       }
     },
-    "/api/order/{email}": {
+    "/api/order/email/search": {
       "get": {
         "description": "",
         "parameters": [
           {
             "name": "email",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
